# ASR-Fusion

./: README.md  config.json  config.yaml  main.py  pyproject.toml  test_asr.py
asr_fusion/: __init__.py  api_types.py  dependencies.py  main.py  text_utils.py
asr_fusion/api/: server.py
asr_fusion/backend/: faster_whisper_backend.py
asr_fusion/config/: config.py
asr_fusion/executors/whisper/: model_manager.py
asr_fusion/models/: faster_whisper_model.py  funasr_model.py  model_manager.py  sensevoice_model.py
asr_fusion/router/: stt.py
asr_fusion/routers/: stt.py  transcription.py  vad.py
asr_fusion/routers/realtime/: ws.py
asr_fusion/sdk/: __init__.py  transcriber.py
asr_fusion/websocket/: websocket_server.py
asr_fusion/whisper_streaming/: whisper_online.py
client/: faster_whisper_test.py  realtime_transcription_client.py  test_client.py  test_streaming.py  transcriber.py
